<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    >

    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/third_mat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="@color/colorAccentTranspalucent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_news_ni_kwamba_kusahau_change_kwa_nganya_imekuwa_mambo_ya_tene"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/opensanslight"
                android:layout_centerHorizontal="true"
                android:id="@+id/first_line_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ukiwa_na_hii_app_utaweza_kuset_alarm"
                android:layout_marginTop="25dp"
                android:id="@+id/second_line_text"
                android:fontFamily="@font/opensanslight"
                android:layout_below="@id/first_line_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_yenyewe_ikiwa_ni_ya_madikika_unataka_ikushtue_ndio_uitishe_change_yako"
                android:layout_marginTop="5dp"
                android:id="@+id/fourth_line_text"
                android:fontFamily="@font/opensanslight"
                android:layout_below="@id/second_line_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kutumia_hii_app_ni_simple_but_cool_click_done_then_ufuate_tutorial_guide_ya_kutumia_hii_app"
                android:layout_marginTop="25dp"
                android:id="@+id/points"
                android:fontFamily="@font/opensanslight"
                android:layout_below="@id/fourth_line_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_point"
                android:layout_marginTop="25dp"
                android:id="@+id/firs_point"
                android:fontFamily="@font/opensanslight"
                android:layout_below="@id/points"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_point"
                android:layout_marginTop="25dp"
                android:id="@+id/second_point"
                android:fontFamily="@font/opensanslight"
                android:layout_below="@id/firs_point"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thirdpoint"
                android:text="@string/third_point"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/opensanslight"
                android:layout_below="@id/second_point"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>

    </RelativeLayout>
</layout>